added materialize, and some other small additions

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
 <body>
-    <input type="text" placeholder="Write question here">
+    <div class="container">
+    <h2>Have a Question?</h2>
+    <div class="form-group">
+        <!-- Make this a form (FORM TO ADD) -->
+        <label for="Question">Question Everything</label>
+        <input type="text" placeholder="Write question here">
+        <label for="Submit">Submit that shit</label>
+        <br>
+        <input type="submit" placeholder="Submit question here">
+    </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
