--- a/index.html
+++ b/index.html
@@ -11,17 +11,32 @@
 </head>
 <body>
     <div class="container">
-    <h2>Have a Question?</h2>
-    <div class="form-group">
-        <!-- Make this a form (FORM TO ADD) -->
-        <label for="Question">Question Everything</label>
-        <input type="text" placeholder="Write question here">
-        <label for="Submit">Submit that shit</label>
-        <br>
-        <input type="submit" placeholder="Submit question here">
-    </div>
+        <h2>Have a Question?</h2>
+        <form class="col s12">
+            <div class="row">
+                
+                <!-- Make this a form (FORM TO ADD) -->
+                <label for="Question">Question Everything</label>
+                <!-- <div class="input-field col s6"></div> -->
+
+                <input type="text" placeholder="Write question here">
+
+                <label for="Submit">Submit that shit</label>
+                <br>
+                <input type="submit" placeholder="Submit question here">
+            </div>
+        </form>
+        <table class="table table-striped mt-5">
+            <thead>
+                <tr>
+                    <th>Question</th>
+                </tr>
+            </thead>
+            <tbody id ="question-list"></tbody>
+        </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
