got questions and answers to display

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <thead>
                 <tr>
                     <th>Question</th>
+                    <th>Answer</th>
                 </tr>
             </thead>
             <tbody id ="question-list"></tbody>
